# churn-prediction

./: .env.example  .gitignore  DF_IBM_processed.csv  Dockerfile  Dockerfile.render  README.md  churn.ipynb  docker-compose.yml  pyproject.toml  requirements.txt  résumé.docx  scaler.pkl
api/: fake_data.py  main.py  models.py
config/: settings.py
encoders_churn/: labelencoder_customerID.pkl  labelencoder_tenure_segment.pkl  tenure_segment_encoder.json
models_production/: features_list.json  final_metrics_optimized.json  optimal_threshold.pkl  xgboost_champion.pkl
src/: encoders.py  feature_engineering.py
streamlit_app/: app.py  config.py  requirements_streamlit.txt  utils.py
streamlit_cloud/: README.md  app.py  requirements.txt
streamlit_cloud/config/: settings.py
streamlit_cloud/encoders/: labelencoder_Contract.pkl  labelencoder_InternetService.pkl  labelencoder_PaymentMethod.pkl
streamlit_cloud/models/: EXECUTIVE_SUMMARY.json  best_hyperparams.json  best_hyperparams_optimized.json  final_metrics.json  xgboost_champion_optimized.pkl
streamlit_cloud/src/: model_wrapper.py  preprocessing.py
tests/: test_model_wrapper.py  test_preprocessing.py
